--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -665,6 +665,21 @@
             </objects>
             <point key="canvasLocation" x="3719.1999999999998" y="124.58770614692655"/>
         </scene>
+        <!--First Movie View Controller-->
+        <scene sceneID="QWz-6V-5Yh">
+            <objects>
+                <viewController id="bAz-dD-v0x" customClass="FirstMovieViewController" customModule="Heart_up" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eyn-fw-2j3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="hwS-S5-CE6"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ofP-qp-phI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1917.5999999999999" y="118.29085457271366"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="pPL-vY-p0g">
             <objects>
