--- a/Heart-up/ShabonContents/ShabonContentsTableViewCell.xib
+++ b/Heart-up/ShabonContents/ShabonContentsTableViewCell.xib
@@ -23,17 +23,28 @@
                         <rect key="frame" x="0.0" y="24" width="50" height="50"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="87R-R7-h2r">
-                        <rect key="frame" x="64" y="11" width="298" height="78"/>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bvq-F7-ZiH">
+                        <rect key="frame" x="58" y="10" width="302" height="78"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkO-r8-2pF">
-                                <rect key="frame" x="12" y="3" width="275" height="72"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fK-AO-BOb">
+                                <rect key="frame" x="97" y="8" width="210" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u5p-Uf-p2w">
+                                <rect key="frame" x="8" y="17" width="42" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="87R-R7-h2r">
+                        <rect key="frame" x="64" y="11" width="303" height="78"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Zl-YM-2mV">
                                 <rect key="frame" x="173" y="57" width="132" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -45,6 +56,13 @@
                                 <rect key="frame" x="191" y="-5" width="96" height="89"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkO-r8-2pF">
+                                <rect key="frame" x="10" y="3" width="293" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -63,12 +81,15 @@
             <connections>
                 <outlet property="nayamiLabel" destination="dkO-r8-2pF" id="G8A-2K-xUC"/>
                 <outlet property="nayamiView" destination="87R-R7-h2r" id="VdZ-sg-QDb"/>
+                <outlet property="replyLabel" destination="2fK-AO-BOb" id="lOR-45-qHq"/>
                 <outlet property="replyOutret" destination="roE-f7-SPw" id="UhR-E4-o6o"/>
+                <outlet property="replyView" destination="bvq-F7-ZiH" id="JUG-YB-uYv"/>
                 <outlet property="stampView" destination="E6i-Bv-C8A" id="4Lm-Yu-c1B"/>
                 <outlet property="toukou_day" destination="3Zl-YM-2mV" id="ciw-dy-WtH"/>
+                <outlet property="userImage" destination="u5p-Uf-p2w" id="1GE-Tr-EXw"/>
                 <outlet property="userProfile" destination="wek-dV-XRV" id="BrZ-tU-A0i"/>
             </connections>
-            <point key="canvasLocation" x="372" y="154"/>
+            <point key="canvasLocation" x="371.5" y="154"/>
         </tableViewCell>
     </objects>
 </document>
