--- a/Heart-up/ShabonContents/replyCommentTableViewCell.xib
+++ b/Heart-up/ShabonContents/replyCommentTableViewCell.xib
@@ -13,13 +13,30 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="replyCommentTableViewCell" rowHeight="60" id="KGk-i7-Jjw" customClass="replyCommentTableViewCell" customModule="Heart_up" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="248" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="367" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="248" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="367" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYp-Kd-iri">
+                        <rect key="frame" x="168" y="5" width="193" height="49"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GEj-Hz-LV8">
+                        <rect key="frame" x="122" y="10" width="38" height="38"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="commentLabel" destination="xYp-Kd-iri" id="Ocn-ld-aa9"/>
+                <outlet property="userProfile" destination="GEj-Hz-LV8" id="O9E-i3-cdk"/>
+            </connections>
             <point key="canvasLocation" x="114" y="66"/>
         </tableViewCell>
     </objects>
