--- a/Heart-up/ShabonContents/replyCommentTableViewCell.xib
+++ b/Heart-up/ShabonContents/replyCommentTableViewCell.xib
@@ -19,18 +19,34 @@
                 <rect key="frame" x="0.0" y="0.0" width="367" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYp-Kd-iri">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYp-Kd-iri">
                         <rect key="frame" x="168" y="5" width="193" height="49"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="49" id="0kg-Qi-VKP"/>
+                            <constraint firstAttribute="width" constant="193" id="8KF-aA-AcY"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GEj-Hz-LV8">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GEj-Hz-LV8">
                         <rect key="frame" x="122" y="10" width="38" height="38"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="38" id="9Cx-vN-waE"/>
+                            <constraint firstAttribute="height" constant="38" id="bZ7-TQ-cvY"/>
+                        </constraints>
                     </imageView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="xYp-Kd-iri" secondAttribute="bottom" constant="5.5" id="BIt-fQ-HXG"/>
+                    <constraint firstItem="xYp-Kd-iri" firstAttribute="leading" secondItem="GEj-Hz-LV8" secondAttribute="trailing" constant="8" id="MN0-EI-c7I"/>
+                    <constraint firstItem="xYp-Kd-iri" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Oly-B2-SwG"/>
+                    <constraint firstItem="xYp-Kd-iri" firstAttribute="leading" secondItem="GEj-Hz-LV8" secondAttribute="trailing" constant="8" id="bUK-fq-FOg"/>
+                    <constraint firstAttribute="trailing" secondItem="xYp-Kd-iri" secondAttribute="trailing" constant="6" id="f9K-Wo-ezq"/>
+                    <constraint firstAttribute="bottom" secondItem="GEj-Hz-LV8" secondAttribute="bottom" constant="11.5" id="f9b-Hm-Q5S"/>
+                    <constraint firstItem="GEj-Hz-LV8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="iz9-HC-Ony"/>
+                    <constraint firstItem="GEj-Hz-LV8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="122" id="wws-PY-gGb"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
