いいね実装途中

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -942,7 +942,7 @@
         <image name="shabon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ubo-jr-8fC"/>
+        <segue reference="zVW-er-emc"/>
         <segue reference="Uby-AE-S2X"/>
     </inferredMetricsTieBreakers>
 </document>
