reactionの総数は取れたので、今からfor key in value で画像を表示していく

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -750,7 +750,7 @@
         <image name="shabon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zVW-er-emc"/>
+        <segue reference="Ubo-jr-8fC"/>
         <segue reference="Uby-AE-S2X"/>
     </inferredMetricsTieBreakers>
 </document>
